# curiosity_rosa_demo

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  README_JP.md  compose.yml
docker/: Dockerfile.curiosity_demo_ext
docs/: ex_result.md  spec.md
docs_dev/: ADR.md  PROJECT_CONTRACT.md  design.md  requirements.md  task_overview.md  tasks_overview.md  user_input.md
docs_dev/specs/: spec_nasajpl_rosa.md  spec_space-ros_demos.md
docs_dev/tasks/: task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10.md  task_11.md  task_12.md  task_13.md  task_14.md  (+2 more)
overlay_ws/src/curiosity_rosa_demo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
overlay_ws/src/curiosity_rosa_demo/config/: llm.yaml  prompts.yaml  rviz.rviz  rviz.yaml  thresholds.yaml  tool_costs.yaml  topics.yaml
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/adapter/: adapter_node.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/agent/: agent_node.py  console.py  memory.py  rich_ui.py  rosa_agent_factory.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/domain/: models.py  serde.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/infra/: config_loader.py  ros_io.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/sim/: image_pipeline.py  light_model.py  simulator_node.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/tools/: tool_impl.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/trace/: trace_buffer.py  trace_codec.py
overlay_ws/src/curiosity_rosa_demo/curiosity_rosa_demo/viz/: marker_builder.py  visualizer_node.py
overlay_ws/src/curiosity_rosa_demo/launch/: demo.launch.py
overlay_ws/src/curiosity_rosa_demo/scripts/: adapter_node  agent_node  simulator_node  visualizer_node
overlay_ws/src/curiosity_rosa_demo/srv/: CaptureAndScore.srv
overlay_ws/src/curiosity_rosa_demo/tests/: conftest.py  test_adapter_exclusivity.py  test_agent_trace_format.py  test_capture_and_score_srv.py  test_config_loader.py  test_domain_models.py  test_image_pipeline.py  test_import.py  test_light_model.py  test_marker_builder.py  test_ros_io.py  test_rosa_integration_smoke.py  test_tools.py  test_trace_buffer.py  test_trace_codec.py
(+6 files in other folders)
